...
                },
                space = 16.dp,
            )
            Spacer(modifier = Modifier.height(42.dp))
            Button(
                modifier = Modifier
                    .testTag("signUpButton")
                    .fillMaxWidth(),
                onClick = {
                    scope.launch {
                        snackbarHostState.showSnackbar("회원가입 완료")
                    }
                },
                enabled = isUsernameValid && isEmailValid && isPasswordValid,
            ) {
                Text(text = stringResource(R.string.sign_up_button))
            }
...
